adiciona a section 'app-sectionTitle', acrescenta imagens  e reposiciona o titulo principal  'h1'

--- a/GameMySQL/index.html
+++ b/GameMySQL/index.html
@@ -12,9 +12,13 @@
     <main>
         <header>
         </header>
+        <section class="app-sectionTitle">
+            <h1 class="app-title">Game<br><strong class="app-titleStrong">MySQL</strong></h1>
+            <figure class="app-iconFigure">
+                <img src="images/mysql-icon.png" alt="icon MySQL" class="app-icons">
+            </figure>
+        </section>
         <section class="app-sectionHome">
-            <h1 class="app-title">Game<strong class="app-titleStrong">MySQL</strong>
-            </h1>
             <ul class="app-listButtons">
                 <li> <button type="button" class="btn-action start-button">Start</button></li>
                 <li><button type="button" class="btn-action ranking-button">Ranking</button></li>
