insere 'p' com descrição das telas

--- a/GameMySQL/index.html
+++ b/GameMySQL/index.html
@@ -19,6 +19,7 @@
             </figure>
         </section>
         <section class="app-sectionHome">
+            <p class="app-title description">Start <strong class="app-titleStrong"> Playing</strong></p>
             <ul class="app-listButtons">
                 <li> <button type="button" class="btn-action start-button">Start</button></li>
                 <li><button type="button" class="btn-action ranking-button">Ranking</button></li>
