Adiciona classe 'active' no botão 'start'

--- a/GameMySQL/index.html
+++ b/GameMySQL/index.html
@@ -21,7 +21,7 @@
         <section class="app-sectionHome">
             <p class="app-title description">Start <strong class="app-titleStrong"> Playing</strong></p>
             <ul class="app-listButtons">
-                <li> <button type="button" class="btn-action start-button">Start</button></li>
+                <li> <button type="button" class="btn-action start-button active">Start</button></li>
                 <li><button type="button" class="btn-action ranking-button">Ranking</button></li>
                 <li><button type="button" class="btn-action about-button">About</button></li>
             </ul>
